--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -3,4 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
-</web-app>
+    <!--add code about servlet-->
+    <servlet>
+<servlet-name>anyName</servlet-name>
+<servlet-class>com.YanYiran.week2.demo.HelloWorldServlet</servlet-class><!--package +name of servlet class-->
+</servlet>
+<servlet-mapping>
+<servlet-name>anyName</servlet-name>
+<url-pattern>/hello</url-pattern>
+</servlet-mapping>
+        </web-app>
