--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,6 +4,9 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
     <!--add code about servlet-->
+    <listener>
+        <listener-class>com.YanYiran.week6.demo.JDBCServletContextListener</listener-class>
+    </listener>
     <context-param>
         <param-name>driver</param-name>
         <param-value>com.microsoft.sqlserver.jdbc.SQLServerDriver</param-value>
@@ -101,4 +104,4 @@
         <servlet-name>ConfigDemo2Servlet</servlet-name>
         <url-pattern>/config2</url-pattern>
     </servlet-mapping>
-        </web-app>
+</web-app>
