--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -104,4 +104,8 @@
         <servlet-name>ConfigDemo2Servlet</servlet-name>
         <url-pattern>/config2</url-pattern>
     </servlet-mapping>
+    
+    <welcome-file-list>
+        <welcome-file>home</welcome-file>
+    </welcome-file-list>
 </web-app>
